# calculon

./: .ccls  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/: LookAhead.h
include/calculon/: Constants.h  Evaluator.h  TerminalEquity.h  Utils.h
include/supremus/: Constants.h  Evaluator.h  Node.h
src/: BetSizing.cc  BetSizing.h  CMakeLists.txt  Constants.h  Evaluator.cc  Node.cc  Node.h  TerminalEquity.cc  TreeBuilder.cc  TreeBuilder.h  Utils.cc  Utils.h
test/: BetSizing.test.cc  CMakeLists.txt  Evaluator.test.cc  Node.test.cc  TerminalEquity.test.cc  TreeBuilder.test.cc  Utils.test.cc
tst/: BetSizing.test.cc  CMakeLists.txt  Node.test.cc  TreeBuilder.test.cc  Utils.test.cc
